# libdc_application

./: CMakeLists.txt  README.md
docs/: CMakeLists.txt  mainpage.md
examples/hello-world/: main.c  makefile  tester
examples/settings/: main.c
include/dc_application/: application.h  command_line.h  config.h  defaults.h  environment.h  options.h  settings.h
src/: CMakeLists.txt  application.c  command_line.c  config.c  defaults.c  environment.c  options.c  settings.c
tests/: CMakeLists.txt
